# optionFiles

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: publish-aur.yml
packaging/aur/: .SRCINFO  PKGBUILD  README.md  bump.sh  publish.sh
src/: app.rs  cli.rs  fs.rs  kitty.rs  main.rs  ui.rs
